syntax = "proto3";

package golem.plan;

import "golem/plan/plan_id.proto";
import "golem/plan/plan_data.proto";

message Plan {
  PlanId plan_id = 1;
  PlanData plan_data = 2;
}
